Images positioned throughout blogger layout
Next will work on hiding/showing all content.

--- a/index.html
+++ b/index.html
@@ -200,6 +200,44 @@
 				<h4>Day 1</h4>
 				<h3>Oakland and Berkeley</h3>
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don’t have to rush into the city during your Northern California visit, though. In fact, it’s a good idea to pace yourself, especially if you’re traveling with children. Starting in San Francisco’s neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they’re both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/brandi/Brandi1.jpg">
+			</div>
+			<div class="col-md-5">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<h5>Children’s Fairyland</h5>
 				<p>Our family first fell in love with Children’s Fairyland on our first visit to Oakland. Super-duper kid-friendly, this fairytale-themed amusement park will be loved by children of all ages. Ride the Jolly Trolly Train, sit in on a puppet show, or meet new animal friends in the menagerie. You can experience the entire park in just a couple of hours, which leaves plenty of time for you to keep exploring.</p>
 				<h5>Jack London Square</h5>
@@ -211,6 +249,36 @@
 				<h4>Day 2</h4>
 				<h3>San Francisco</h3>
 				<p>The starlet of Northern California is obviously San Francisco. It’s one of the most visited cities in the world. If you’re in the region, you absolutely cannot miss it. If you start in Oakland, you can take the ferry from Jack London Square over to Fisherman’s Wharf for an exciting beginning to a day in the city. Even if you don't take the ferry, BART is a super affordable way to get into San Francisco, or you can leave the car at one of the many parking garages that are available.</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/brandi/Brandi1.jpg">
+			</div>
+			<div class="col-md-5">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<h5>Fisherman’s Wharf</h5>
 				<p>No matter what your plans are, Fisherman’s Wharf has to be on your agenda. There’s so much to do there! You can see some ships, get a glimpse of Alcatraz, and watch the sea lions sunbathe or play. I have to warn you, though: It might be hard to drag the family to the next attraction after they see the sea lions! They’re just so darn interesting to watch!</p>
 				<h5>Chinatown</h5>
@@ -218,6 +286,13 @@
 				<h5>Golden Gate Bridge</h5>
 				<p>Since it’s one of the most iconic bridges in the country, you have to go over the Golden Gate bridge if you’re in Northern California. Every few weeks I try to sweet-talk my husband into driving me over the bridge because I absolutely love the views! Not only will your kids be impressed by the sheer size and beauty of the bridge, but it takes you to one of the most lovely little cities in our area.</p>
 				<h5>Sausalito</h5>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<p>After you drive over the Golden Gate Bridge, make your way to the Bay Area Discovery Museum. With its focus on imagination, creativity, and STEM activities, even the adults in the family will be engaged at the museum. There are often special events going on, so make sure you check the museum calendar before you go. After you leave, check out some of the shops in downtown Sausalito, and sit down for lunch at one of the many family-friendly restaurants in the area.</p>
 				<h5>Treasure Island</h5>
 				<p>To end your day, head over to Treasure Island, right at the end of the Bay Bridge, to watch the sunset. You won’t find a better view of San Francisco anywhere else. It’ll be the perfect close to a fun-filled day, and a memory that you’ll never, ever forget!</p>
@@ -227,6 +302,26 @@
 				<h6>Option #1: Yosemite National Park</h6>
 				<h5>Yosemite National Park</h5>
 				<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It’s a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you’ll be reminded of how beautiful our country truly is.</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/brandi/Brandi1.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<h6>Option #2: Santa Cruz</h6>
 				<h5>Santa Cruz Beach Boardwalk</h5>
 				<p>When I lived on the East Coast, one of my favorite things to do with my daughter was take a bus to the shore and hang out at the beach. Our version of that is the Santa Cruz Beach Boardwalk with its classic amusements, rides, and attractions. There’s a Ferris wheel, games, miniature golf, and great beach-themed foods. Your family will have the best time at the Santa Cruz Boardwalk!</p>
@@ -239,9 +334,10 @@
 				<p>You may know San Jose as the tech center of Northern California, but there’s plenty for families to do there, too! Just about an hour away from Oakland, San Jose makes a fun and easy day trip. Start your morning at Happy Hollow Park and Zoo for a close up look at some really sweet animals. After that, head over to the Children’s Discovery Museum for lunch and to play. You and your kiddos will love the gardens, imaginative exhibits, and opportunities to engage with science.</p>
 				<p>Now do you see why it was so easy for me to fall in love with Northern California? It’s the very best of everything our great country has to offer, and there’s no place I’d rather live, love, and have fun!</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
-			</div>
+			
+			<!-- <div class="col-md-5 col-md-offset-1">
+				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
+			</div> -->
 		</div>
 	</div>
 </section> 
@@ -726,7 +822,7 @@
 	</div>
 	<a href="#chabot-space">
 		<ul class="hideContentWrap" id="chabot-space">
-			<li class="hideContentHeader">Chabot Space & Science Center</li>
+			<li class="hideContentHeader">Chabot Space &amp; Science Center</li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Ready for an out-of-this-world adventure? Head to Oakland to take a trip through outer space via Chabot’s state-of-the-art planetarium, or see if you have the right stuff on a simulated space mission in the Challenger Learning Center. The center is great for all ages, including the littlest astronauts, who can enroll in the Tyke Explorers Workshop, which teaches children three to five years old about space, dinosaurs, the human body, and other science topics. Chabot is home to three telescopes open for public viewing—visit after sunset for a spectacular view of the night sky.</p>
