--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </section>
 
 <!-- BRANDI POST -->
-<section class="bg-img-container-wrap" id="nrthrn-blog-post">
+<section class="bg-img-container-wrap blog" id="nrthrn-blog-post">
 	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-md-9">
@@ -246,14 +246,20 @@
 				<p>Once you finish lunch, it’s time to head over to Tilden Park in Berkeley. There’s a farm with a petting zoo, a carousel, botanical garden, and a steam train! Make sure you bring a blanket, because the acres of lush grass are perfect for a quick nap to refuel after you experience all the park has to offer.</p>
 				<h5>Shorebird Park Nature Center and Adventure Playground</h5>
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you’ve ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo’s favorite part of the entire day!</p>
-				<h4>Day 2</h4>
-				<h3>San Francisco</h3>
-				<p>The starlet of Northern California is obviously San Francisco. It’s one of the most visited cities in the world. If you’re in the region, you absolutely cannot miss it. If you start in Oakland, you can take the ferry from Jack London Square over to Fisherman’s Wharf for an exciting beginning to a day in the city. Even if you don't take the ferry, BART is a super affordable way to get into San Francisco, or you can leave the car at one of the many parking garages that are available.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
 				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<h4>Day 2</h4>
+				<h3>San Francisco</h3>
+				<p>The starlet of Northern California is obviously San Francisco. It’s one of the most visited cities in the world. If you’re in the region, you absolutely cannot miss it. If you start in Oakland, you can take the ferry from Jack London Square over to Fisherman’s Wharf for an exciting beginning to a day in the city. Even if you don't take the ferry, BART is a super affordable way to get into San Francisco, or you can leave the car at one of the many parking garages that are available.</p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-md-7">
 				<img class="over" src="images/brandi/Brandi1.jpg">
@@ -334,12 +340,10 @@
 				<p>You may know San Jose as the tech center of Northern California, but there’s plenty for families to do there, too! Just about an hour away from Oakland, San Jose makes a fun and easy day trip. Start your morning at Happy Hollow Park and Zoo for a close up look at some really sweet animals. After that, head over to the Children’s Discovery Museum for lunch and to play. You and your kiddos will love the gardens, imaginative exhibits, and opportunities to engage with science.</p>
 				<p>Now do you see why it was so easy for me to fall in love with Northern California? It’s the very best of everything our great country has to offer, and there’s no place I’d rather live, love, and have fun!</p>
 			</div>
-			
-			<!-- <div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
-			</div> -->
 		</div>
 	</div>
+	<p class="blog-reveal"><a class="button">Read More</a></p>
+	<div class="bottom-grad"></div>
 </section> 
 
 <!-- CAMP CA -->
