--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@
 			<div class="col-md-12">
 				<ul class="scroll-list">
 					<li class="parallax-bg__empty" id="list-roadtrip">
-						<div class="roadtrip-circle" id="roadtrip-circle-1" style="transform: none">
+						<div class="circle-container" id="roadtrip-circle-1">
+							<div class="roadtrip-circle"></div>
 						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
@@ -534,7 +535,9 @@
 								<p>About eight miles south of the Stafford end of the Avenue of the Giants sits the Eternal Tree House, a rustic roadside stop with a gift shop, restaurant, and a 20-square foot room located in the stump of one of the giants. Visitors to the house can leave their name in the guestbook before going back on the road.</p>
 							</div>
 						</div>
-						<div class="roadtrip-circle" id="roadtrip-circle-2">
+						<div class="circle-container" id="roadtrip-circle-2">
+							<div class="roadtrip-circle"></div>
+						</div>
 					</li>
 				</ul>		
 			</div>
