Hide/show working
JS script added

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you’ve ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo’s favorite part of the entire day!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
+				<img class="sect-break under" src="images/brandi/Brandi2.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -259,6 +259,7 @@
 			</div>
 		</div>
 	</div>
+	<div data-readmore>
 	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-md-7">
@@ -342,8 +343,7 @@
 			</div>
 		</div>
 	</div>
-	<p class="blog-reveal"><a class="button">Read More</a></p>
-	<div class="bottom-grad"></div>
+	</div><!--hide-blog end-->
 </section> 
 
 <!-- CAMP CA -->
