Photo caption/credit styling developed
Still in progress.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			<div class="col-md-9">
 				<h1>Brandi's Guide To Northern California</h1>
 				<h2>The mama behind <span class="italc">Mama Knows It All</span> shares her favorite places to play with her family.</h2>
-				<img class="img-responsive begin-content blogger-info-box" src="images/FPO_Blogger_box.png">
+				<img class="blogger-info-box" src="images/FPO_Blogger_box.png">
 			</div>
 		</div>
 		<div class="row">
@@ -202,14 +202,9 @@
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don’t have to rush into the city during your Northern California visit, though. In fact, it’s a good idea to pace yourself, especially if you’re traveling with children. Starting in San Francisco’s neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they’re both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<img src="images/FPO_northern-blogger-rsideimg1.jpg">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
-					<h5>Lorem Ipsum</h5>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p>Oakland at night. <span class="italc cred inline">Getty Images</span></p>
 				</div>
 			</div>
 		</div>
@@ -223,16 +218,16 @@
 						<circle cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<h5>Lorem Ipsum</h5>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<h5>Lorem Ipsum</h5>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
 				</div>
 			</div>
 		</div>
@@ -263,7 +258,7 @@
 	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/brandi/Brandi1.jpg">
+				<img class="over" src="images/brandi/Brandi3.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -271,16 +266,16 @@
 						<circle cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<h5>Lorem Ipsum</h5>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<h5>Lorem Ipsum</h5>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
 				</div>
 			</div>
 		</div>
@@ -295,7 +290,7 @@
 				<h5>Sausalito</h5>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="sect-break under" src="images/brandi/Brandi1.jpg">
+				<img class="sect-break under" src="images/brandi/Brandi4.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -311,20 +306,19 @@
 				<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It’s a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you’ll be reminded of how beautiful our country truly is.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<img class="img-responsive" src="images/brandi/Supplied-Brandi5.jpg">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
-					<h5>Lorem Ipsum</h5>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/brandi/Brandi1.jpg">
+				<img class="over" src="images/brandi/FPO_Yosemite.jpg">
+				<div class="caption">
+					<p class="italc cred inline">Getty Images</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -801,7 +795,6 @@
 						<circle cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<h5>Lorem Ipsum</h5>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
 				</div>
 			</div>
