--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	<div class="nav-status-bar"></div>
 </section>
 
-<section class="region-hero full-page">
+<section class="region-hero full-page" id="nca-hero">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4505 255.3401)" class="state shad">California</text>
@@ -1351,5 +1351,6 @@
 
 
 <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
 </body>
 </html>
