Patties post images
All images put in place.

--- a/index.html
+++ b/index.html
@@ -783,6 +783,31 @@
 				<h4>Day 2</h4>
 				<h3>Solvang</h3>
 				<p>About an hour away from Santa Barbara is a quaint little town called Solvang. Driving into Solvang will make you feel as though you’re stepping back in time. You will immediately get the small-town feel (it has a population of about 5,500) as you drive down its one major road and past its mom-and-pop shops and well-known bakeries. Founded by a group of Danes in 1911, the town gives you the feeling that it hasn’t changed much since then.</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="img-responsive" src="images/pattie/visiting-oceanside.jpg">
+				<div class="caption">
+					<p>Lorem ipsum dolor amet. <span class="italc cred inline">Getty Images</span></p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/pattie/Solvang.jpg">
+			</div>
+			<div class="col-md-5">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<p>Solvang is still home to bakeries, restaurants, and merchants who have continued to offer a taste of Denmark through its food, landscape, and museums.</p>
 				<h5>You can find us at...</h5>
 				<p>The shoe store trying on a pair of clogs, the local bookstore peeking into the Hans Christian Andersen museum upstairs, and, of course, around Copenhagen replicas like the Little Mermaid statue and the Round Tower, taking family pictures. We’ll also be stopping by Old Mission Santa Inés near the center of town. Just outside of Solvang, we’ll stop by OstrichLand USA—a ranch where visitors can see ostriches, feed them, and even buy their eggs!</p>
@@ -791,17 +816,37 @@
 				<p>Covering a large piece of California is the Central Valley. This area is known for producing an abundance of fresh fruits, vegetables, and greenery, coupled with its small-town feel and country atmosphere. Highway 99 will take you where you need to go, but your family will enjoy discovering off-the-beaten-path destinations the most.</p>
 				<h5>You can find us at...</h5>
 				<p>The produce stands, stocking up on in-season fruits. We’d like to visit UC Davis and rent bikes to discover the campus, and maybe take some time for some much-needed water play at The Delta. There, you can do everything from waterskiing to fishing to wildlife watching.</p>
-				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you’ll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us three days of fun, great meals, and bonding moments that will carry us into our future California travels.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/pattie/visiting-oceanside.jpg">
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/pattie/central-valley.jpg">
+			</div>
+			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
 				</div>
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you’ll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us three days of fun, great meals, and bonding moments that will carry us into our future California travels.</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="sect-break under" src="images/pattie/Supplied_2.jpg">
 			</div>
 		</div>
 	</div>
