Works in progress ALL OF IT

--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
 	</div>
 	<div class="container-fluid article">
 		<div class="row">
-			<div class="parallax-bg__surf" id="surf-list">
+			<div class="parallax-bg__surf_1" id="surf-list">
 				<div class="col-md-12 col-md-offset-1">
 					<div class="surf-skate-title">
 						In The </br> <span class="surf-skate-title-accent">Water</span>
