All section marker SVGs in place
And finalized with their styles in the CSS.

--- a/index.html
+++ b/index.html
@@ -345,7 +345,12 @@
 </section> 
 
 <!-- CAMP CA -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="camp-ca">
 	<div class="container-fluid article">
 		<div class="row">
@@ -488,7 +493,12 @@
 </section>
 
 <!-- PHOTO OP -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="photo-op">
 	<div class="container-fluid article">
 		<div class="row">
@@ -545,7 +555,12 @@
 </section>
 
 <!-- ROAD TRIP -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="article-roadtrip">
 	<div class="container-fluid article">
 		<div class="row">
@@ -643,7 +658,12 @@
 </section>
 
 <!-- KID ATTRACTIONS -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="kid-attractions">
 	<div class="container-fluid article">
 		<div class="row">
@@ -858,7 +878,12 @@
 </section> 
 
 <!-- Edu(va)cation -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="eduvacation">
 	<div class="container-fluid article">
 		<div class="row">
@@ -935,7 +960,12 @@
 </section>
 
 <!-- Meet Central California -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="article-meet-cca">
 	<div class="container-fluid article">
 		<div class="row">
@@ -976,7 +1006,12 @@
 </section> 
 
 <!-- Must-See Parks -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="must-see-parks">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1037,7 +1072,12 @@
 </section>
 
 <!-- #EEATS -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="article-eats">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1325,7 +1365,12 @@
 </section> 
 
 <!-- Theme Parks -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="theme-parks">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1433,7 +1478,12 @@
 </section>
 
 <!-- Surf 'n Skate' -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="article-surf-skate">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1540,7 +1590,12 @@
 </section>
 
 <!-- Kid Beaches -->
-<img class="section-marker" src="images/section-marker.png">
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
 <section class="bg-img-container-wrap northern" id="kid-beaches">
 	<div class="container-fluid article">
 		<div class="row">
