--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
 
-<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZNhA-UO2M07yKZ4Khrj0OcvNEmXD6gI8&callback=initMap"
+    async defer></script> -->
 
 <section class="main-hero full-page">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
@@ -563,7 +564,7 @@
 				<ul class="scroll-list">
 					<li class="parallax-bg__empty" id="list-roadtrip">
 						<div class="circle-container" id="roadtrip-circle-1">
-							<div class="roadtrip-circle"></div>
+							<div class="roadtrip-circle" id="circle-map"></div>
 						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
@@ -1618,6 +1619,8 @@
 
 
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
+<!-- <script src="js/jquery.waypoints.min.js"></script> -->
+
+
 </body>
 </html>
